# python-spgill-utils

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  build-package.sh  requirements.txt  setup.cfg  setup.py
package-scripts/: .dockerfile  build-package.sh
spgill/ibm/mockthis/: __main__.py
spgill/ibm/plexsmoosh/: __main__.py
spgill/ibm/repack/: __main__.py
spgill/ibm/scrabble/: __main__.py
spgill/ibm/trans/: __main__.py
spgill/utils/: __uuid__  chassis.py  mediainfo.py  mkv.py  mkvmerge.py  nameswap.py  types.py  walk.py
spgill/utils/aoc/: __init__.py
spgill/utils/cipher/: __init__.py
spgill/utils/media/: edit.py  exceptions.py  info.py  mux.py  tools.py
spgill/utils/mux/: __init__.py  edit.py  info.py  mediainfo.py  merge.py  mkvmerge.py
spgill/utils/shorten/: __init__.py  __main__.py
spgill/utils/tunnel/: __main__.py  __uuid__
