[metadata]
name = python-spgill-utils
version = file: VERSION
long_description = file: README.md
author = Samuel P. Gillispie II
author_email = samuel@spgill.me
url = https://github.com/spgill/python-spgill-utils
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
packages = find_namespace:
install_requires = 
    charset_normalizer
    click
    click_shell
    colorama
    humanize >= 4.8.0
    pydantic >= 2.2.0
    pyperclip
    requests
    rich
    sh >= 2.0.0
    typer >= 0.9.0

[options.packages.find]
include = spgill.*

[bdist_wheel]
universal = 0
